[gd_scene load_steps=2 format=3 uid="uid://ceisox02h08rv"]

[ext_resource type="Script" uid="uid://djpedomi4irik" path="res://Settings/segment_editor.gd" id="1_kiuoh"]

[node name="SegmentEditor" type="HBoxContainer" node_paths=PackedStringArray("seg_name", "seg_time", "seg_best")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
script = ExtResource("1_kiuoh")
seg_name = NodePath("SegName")
seg_time = NodePath("SegTime")
seg_best = NodePath("SegBest")

[node name="SegName" type="LineEdit" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="SegTime" type="LineEdit" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="SegBest" type="LineEdit" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="MoveUp" type="Button" parent="."]
layout_mode = 2
text = "Move Up"

[node name="MoveDown" type="Button" parent="."]
layout_mode = 2
text = "Move Down"

[node name="Delete" type="Button" parent="."]
layout_mode = 2
text = "Remove"

[connection signal="text_submitted" from="SegName" to="." method="_on_seg_name_text_changed"]
[connection signal="text_submitted" from="SegTime" to="." method="_on_seg_time_text_changed"]
[connection signal="text_submitted" from="SegBest" to="." method="_on_seg_best_text_changed"]
[connection signal="pressed" from="MoveUp" to="." method="_on_move_up_pressed"]
[connection signal="pressed" from="MoveDown" to="." method="_on_move_down_pressed"]
[connection signal="pressed" from="Delete" to="." method="_on_delete_pressed"]
